--- a/responsive.css
+++ b/responsive.css
@@ -49,7 +49,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: black;
+    background-color: #b6eb7a;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -92,7 +92,7 @@
   }
 
   header {
-    background-color: black;
+    background-color: #b6eb7a;
     padding: 12px;
     border: none;
     font-size: 20px;
@@ -101,7 +101,7 @@
 
   footer {
     padding: 5px;
-    background-color: #17706e;
+    background-color: #b6eb7a;
     color: black;
   }
   table, th, td {
