--- a/responsive.css
+++ b/responsive.css
@@ -49,7 +49,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #b6eb7a;
+    background-color:#b6eb7a;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -101,8 +101,8 @@
 
   footer {
     padding: 5px;
-    background-color: #b6eb7a;
-    color: black;
+    background-color: #17706e;
+    color: #b6eb7a;
   }
   table, th, td {
       border: 1px solid #dddddd;
