--- a/responsive.css
+++ b/responsive.css
@@ -116,3 +116,13 @@
       color: white;
       background-color: white;
   }
+  @media only screen and (max-width: 760px),
+  (min-device-width: 768px) and (max-device-width: 1024px)  {
+  
+    /* Force table to not be like tables anymore */
+    table, thead, tbody, th, td, tr { 
+      display: block; 
+    }
+    
+   
+  }
