--- a/responsive.css
+++ b/responsive.css
@@ -36,11 +36,11 @@
   }
 
   a:hover {
-    text-decoration: underline;
+    text-decoration: none;
   }
 
   a:active {
-    text-decoration: underline;
+    text-decoration: none;
   }
 
   .sidenav {
